--- a/font.css
+++ b/font.css
@@ -46,7 +46,7 @@ body {
 }
 
 h1 {
-	font-family: 'Facebook Reader Medium', FacebookReader-Medium, 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size:42px;
 	font-weight:500;
 	line-height:48px;
@@ -56,7 +56,7 @@ h1 {
 }
 
 h2 {
-	font-family: 'Facebook Reader Bold', FacebookReader-Bold, 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family:'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size:28px;
 	font-weight:500;
 	line-height:32px;
@@ -64,7 +64,7 @@ h2 {
 	color: #344854;
 }
 h3 {
-	font-family: 'Facebook Reader Regular', FacebookReader-Regular, 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 24px;
 	margin-bottom: 24px;
 	font-weight: 400;
@@ -72,7 +72,7 @@ h3 {
 }
 
 h4 {
-	font-family: 'Facebook Reader Medium', FacebookReader-Medium, 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family:'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	letter-spacing: 0.6px;
 	line-height: 26px;
@@ -122,7 +122,7 @@ blockquote {
 cite {
   max-width: 640px;
   line-height: 25px;
-  vertical-align: top;
+  /* vertical-align: top; */
   font-size: 14px;
   display: block;
   font-style: normal;
