--- a/home-page.css
+++ b/home-page.css
@@ -1,14 +1,8 @@
 .cover{
-	display: grid;
-	grid-gap: 0px;
-    grid-template-columns:1fr;
     height: 100%;
-	background-color: #272F6B;
-	padding-top: 20%;
-	padding-bottom: 20%;
-	box-shadow: 0 20px 20px rgba(0,0,0,.2);
-	margin-bottom: 20px;
-
+	background: linear-gradient(180deg, #186DFF 7.29%, rgba(175, 193, 255, 0.51) 100%);
+	padding-top: 5px;
+	padding-bottom: 5%;
 }
 
 
@@ -26,29 +20,28 @@
 /* Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.big-container {
+.container {
 	display: grid;
 	grid-gap: 0px;
-    grid-template-columns:1fr;
+    grid-template-columns:repeat(auto-fill, minmax(537.5px,1fr));
     justify-content: center;;
-/*	position: relative;
-*/	width: 100%;
+	width: 100%;
 	max-width: 1195px;
 	margin: 0 auto;
 	box-sizing: border-box; 
 }
- 
 
-.container {
-	display: grid;
-	grid-gap: 0px;
-    grid-template-columns:repeat(auto-fill, minmax(395px,1fr));
-    justify-content: center;;
-/*	position: relative;
-*/	width: 100%;
-	max-width: 1195px;
-	margin: 0 auto;
-	box-sizing: border-box; 
+@media screen and (max-width: 537.5px) {
+	.container {
+		display: grid;
+		grid-gap: 0px;
+		grid-template-columns:1fr;
+		justify-content: center;;
+		width: 100%;
+		max-width: 1195px;
+		margin: 0 auto;
+		box-sizing: border-box; 
+	}
 }
  
 .container--header {
@@ -64,40 +57,33 @@
 /* Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.big-card {
-  display: inline-block;
-  width: span 3;
-  background-color: white;
-  vertical-align: top;
-  text-align: left;
-  height: 490px;
-  padding: 20px;
-  margin:20px;
-  box-shadow: 0 20px 20px rgba(0,0,0,.08);
-/*	white-space: normal;
-*/	-webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
-	-moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
-	transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-  color: #4B4F56;
+.card {
+display: inline-block;
+width: 1fr;
+background-color: white;
+vertical-align: top;
+text-align: left;
+height: 600px;
+padding: 20px;
+margin:20px;
+box-shadow: 0 20px 20px rgba(0,0,0,.08);
+border-radius: 10px;
+overflow-y: scroll;
+white-space: normal;
+-webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
+-moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
+transition: all 250ms cubic-bezier(.02, .01, .47, 1);
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.card::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
 .card {
-  display: inline-block;
-/*  position: relative;
-*/  width: 1fr;
-  background-color: white;
-  vertical-align: top;
-  text-align: left;
-  height: 490px;
-  padding: 20px;
-  margin:20px;
-  box-shadow: 0 20px 20px rgba(0,0,0,.08);
-	/*white-space: normal;
-	-webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
-	-moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
-	transition: all 250ms cubic-bezier(.02, .01, .47, 1);*/
-/*  color: #4B4F56;
-*/}
+    -ms-overflow-style: none;
+}
 
 
 .fakeimg {
@@ -109,34 +95,36 @@
 
 .card-title {
 	font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 24px;
-	font-weight: 400;
-	line-height: 30px;
+	font-size: 32px;
+	font-weight: 800;
+	line-height: 40px;
 	margin-bottom: 12px;
 	color: #344854;
 }
 
-/* Call to Action
+
+/* Navbar
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.call-to-action{
-	font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 4rem;
-	font-weight: 700;
-	line-height: 65px;
-	margin-bottom: 12px;
-	padding-top: 150px;
-	padding-left: 40px;
-	color: #344854;
+.nav-bar {
+	display: inline-block;
+	width: 1fr;
+	vertical-align: top;
+	text-align: left;
+	height: 60px;
+	padding: 20px;
+	margin:20px;
+	white-space: normal;
+	-webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
+	-moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1); 
+	transition: all 250ms cubic-bezier(.02, .01, .47, 1);
 }
 
-.call-to-action-subtitle{
- 	font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 2rem;
-	font-weight: 400;
-	line-height: 65px;
-	margin-bottom: 12px;
-	padding-left: 40px;
-	color: #344854;
+.icon-openpr {
+	font-family: Raleway;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 36px;
+	line-height: 42px;
+	color: #FFFFFF;
 }
-
